--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prebuild": "typings install",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/notenoughneon/typed-promisify#readme",
   "devDependencies": {
+    "mocha": "^3.0.2",
     "typescript": "^1.8.10",
     "typings": "^1.3.2"
   }
