fix #4 noImplicitAny warnings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
-	"compilerOptions": {
-		"target": "es6",
-		"module": "commonjs",
-		"sourceMap": true
-	},
+    "compilerOptions": {
+        "target": "es6",
+        "module": "commonjs",
+        "sourceMap": true,
+        "noImplicitAny": true
+    },
     "exclude": [
         "node_modules",
         "typings/browser",
