--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.4.0",
   "description": "Typescript promisify, map, and try",
   "main": "index.js",
-  "scripts": {
-    "prebuild": "typings install",
-    "build": "tsc",
-    "test": "mocha test"
+  "scripts": {    
+    "prepublish": "tsc",
+    "test": "mocha --compilers ts:ts-node/register test.ts"
   },
   "repository": {
     "type": "git",
@@ -25,8 +24,9 @@
   },
   "homepage": "https://github.com/notenoughneon/typed-promisify#readme",
   "devDependencies": {
+    "@types/mocha": "^2.2.40",
     "mocha": "^3.0.2",
-    "typescript": "^2.1.5",
-    "typings": "^1.3.2"
+    "ts-node": "^3.0.2",
+    "typescript": "^2.1.5"
   }
 }
