--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "homepage": "https://github.com/notenoughneon/typed-promisify#readme",
   "devDependencies": {
+    "@types/mocha": "^2.2.5",
+    "@types/node": "^6.0.0",
     "mocha": "^3.0.2",
     "typescript": "^2.1.5",
-    "typings": "^1.3.2"
   }
 }
