modern ts setup
- testing with ts-node and mocha-typescript
- separate source and dist files
- add npmignore to exclude source from module
- add typings output to module config
- fix tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,14 @@
     "compilerOptions": {
         "target": "es6",
         "module": "commonjs",
+        "outDir": "dist",
         "sourceMap": true,
         "declaration": true,
         "noImplicitAny": true
     },
     "exclude": [
         "node_modules",
+        "dist",
+        "**/*.spec.ts"
     ]
 }
