--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "typed-promisify",
   "version": "0.4.0",
   "description": "Typescript promisify, map, and try",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "prebuild": "typings install",
     "build": "tsc",
-    "test": "mocha test"
+    "test": "mocha --opts mocha.opts"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,8 @@
     "@types/mocha": "^2.2.5",
     "@types/node": "^6.0.0",
     "mocha": "^3.0.2",
-    "typescript": "^2.1.5",
+    "mocha-typescript": "1.1.14",
+    "ts-node": "^6.0.0",
+    "typescript": "^2.1.5"
   }
 }
